--- a/blaxel.toml
+++ b/blaxel.toml
@@ -1,6 +1,6 @@
-name = "{{.ProjectName}}"
-workspace = "{{.Workspace}}"
+name = "agent-langchain"
+workspace = ""
 type = "agent"
 
 functions = ["all"]
-models = ["{{.Model}}"]
+models = ["sandbox-openai"]
