--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "dependencies": {
     "@langchain/core": "^0.3.40",
     "@langchain/langgraph": "^0.2.46",
-    "@blaxel/sdk": "0.1.1-preview.20",
+    "@blaxel/sdk": "0.1.2",
     "fastify": "^5.2.1",
     "zod": "^3.24.2"
   },
