--- a/package.json
+++ b/package.json
@@ -13,9 +13,10 @@
     "build": "tsc"
   },
   "dependencies": {
-    "@blaxel/sdk": "0.1.9",
+    "@blaxel/sdk": "0.1.11",
     "@langchain/core": "^0.3.40",
     "@langchain/langgraph": "^0.2.46",
+    "@opentelemetry/instrumentation-fastify": "^0.45.0",
     "fastify": "^5.2.1",
     "zod": "^3.24.2"
   },
