--- a/package.json
+++ b/package.json
@@ -12,18 +12,21 @@
     "dev": "tsx watch src/index.ts",
     "build": "tsc"
   },
+  "type": "module",
   "dependencies": {
-    "@blaxel/sdk": "0.1.15",
-    "@langchain/core": "^0.3.40",
-    "@langchain/langgraph": "^0.2.46",
-    "@opentelemetry/instrumentation-fastify": "^0.45.0",
-    "fastify": "^5.2.1",
-    "zod": "^3.24.2"
+    "@blaxel/core": "0.2.0-dev11",
+    "@blaxel/langgraph": "0.2.0-dev11",
+    "@blaxel/telemetry": "0.2.0-dev11",
+    "@langchain/core": "^0.3.51",
+    "@langchain/langgraph": "^0.2.68",
+    "fastify": "^5.3.2",
+    "langchain": "^0.3.24",
+    "zod": "^3.24.3"
   },
   "devDependencies": {
     "@types/express": "^5.0.1",
-    "@types/node": "^22.13.11",
-    "tsx": "^4.19.3",
-    "typescript": "^5.8.2"
+    "@types/node": "^22.15.3",
+    "tsx": "^4.19.4",
+    "typescript": "^5.8.3"
   }
 }
